added files that get written to to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ RSA/encodeddata.txt
 RSA/decodeddata.txt
 RSA/data.txt
 RSA/encodeddata.txt
+RSA/bandit_passwords.txt
+RSA/banditencodeddata.txt
+RSA/teenyencrypteddata.txt
+RSA/teenyencodeddata.txt
+RSA/teeny.txt
